unpackaged/main/default/objects/Calendrier_Astreinte__c/Calendrier_Astreinte__c.object-meta.xml
<CustomObject>
    <label>Calendrier Astreinte</label>
    <nameField>
        <label>Calendrier Astreinte Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendriers Astreintes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>