unpackaged/main/default/objects/Calendrier_Astreinte__c/fields/Actif__c.field-meta.xml
<CustomField>
    <fullName>Actif__c</fullName>
    <formula>Date_de_debut__c  &lt;= TODAY() &amp;&amp; TODAY()  &lt;=  Date_de_fin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actif</label>
    <type>Checkbox</type>
</CustomField>