unpackaged/main/default/objects/Calendrier_Astreinte__c/fields/Agence_PF__c.field-meta.xml
<CustomField>
    <fullName>Agence_PF__c</fullName>
    <label>Agence PF</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agence PF</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Calendriers Astreintes</relationshipLabel>
    <relationshipName>Calendriers_Astreintes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>