unpackaged/main/default/objects/Calendrier_Astreinte__c/fields/Annee__c.field-meta.xml
<CustomField>
    <fullName>Annee__c</fullName>
    <label>Année</label>
    <length>5</length>
    <type>Text</type>
</CustomField>