unpackaged/main/default/objects/Calendrier_Astreinte__c/fields/Astreinte__c.field-meta.xml
<CustomField>
    <fullName>Astreinte__c</fullName>
    <label>Astreinte</label>
    <type>Phone</type>
</CustomField>