unpackaged/main/default/objects/Calendrier_Astreinte__c/fields/N_semaine__c.field-meta.xml
<CustomField>
    <fullName>N_semaine__c</fullName>
    <label>N° semaine</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>