unpackaged/main/default/objects/Calendrier_Astreinte__c/fields/Nom_du_technicien_joker_2__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_technicien_joker_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nom du technicien joker 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Calendriers Astreintes (Nom du technicien joker 2)</relationshipLabel>
    <relationshipName>Calendriers_Astreintes2</relationshipName>
    <type>Lookup</type>
</CustomField>