unpackaged/main/default/objects/Calendrier_Astreinte__c/fields/Nom_du_technicien_joker__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_technicien_joker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nom du technicien joker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Calendriers Astreintes (Nom du technicien joker)</relationshipLabel>
    <relationshipName>Calendriers_Astreintes1</relationshipName>
    <type>Lookup</type>
</CustomField>