unpackaged/main/default/objects/Calendrier_Astreinte__c/fields/Nom_du_technicien_permanence__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_technicien_permanence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nom du technicien permanence</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Calendriers Astreintes</relationshipLabel>
    <relationshipName>Calendriers_Astreintes</relationshipName>
    <type>Lookup</type>
</CustomField>