unpackaged/main/default/objects/Calendrier_Astreinte__c/fields/Numero_domicile_joker__c.field-meta.xml
<CustomField>
    <fullName>Numero_domicile_joker__c</fullName>
    <formula>Nom_du_technicien_joker__r.Numero_tel_domicile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéro domicile joker</label>
    <type>Text</type>
</CustomField>