unpackaged/main/default/objects/Calendrier_Astreinte__c/fields/Numero_domicile_permanence__c.field-meta.xml
<CustomField>
    <fullName>Numero_domicile_permanence__c</fullName>
    <formula>Nom_du_technicien_permanence__r.Numero_tel_domicile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéro domicile permanence</label>
    <type>Text</type>
</CustomField>