unpackaged/main/default/objects/Calendrier_Astreinte__c/fields/Numero_mobile_personnel_permanence__c.field-meta.xml
<CustomField>
    <fullName>Numero_mobile_personnel_permanence__c</fullName>
    <formula>Nom_du_technicien_permanence__r.Numero_tel_mobile_personnel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéro mobile personnel permanence</label>
    <type>Text</type>
</CustomField>