unpackaged/main/default/objects/Calendrier_Astreinte__c/fields/Numero_semaine_dates__c.field-meta.xml
<CustomField>
    <fullName>Numero_semaine_dates__c</fullName>
    <formula>&quot;Semaine &quot; &amp; text(N_semaine__c)&amp; &quot;&quot; 
&amp; &quot; - &quot; &amp;&quot;Du &quot;&amp; Text(Day(Date_de_debut__c)) &amp; &quot;/&quot; &amp; text(month(Date_de_debut__c)) &amp; &quot;/&quot; &amp; text(YEAR(Date_de_debut__c))
&amp;&quot; Au &quot; &amp; text(Day(Date_de_fin__c)) &amp; &quot;/&quot; &amp; text(month(Date_de_fin__c)) &amp; &quot;/&quot; &amp; text(YEAR(Date_de_fin__c))</formula>
    <label>Numéro semaine - dates</label>
    <type>Text</type>
</CustomField>