unpackaged/main/default/objects/Calendrier_Astreinte__c/validationRules/Validation_Champ_Annee.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Champ_Annee</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNUMBER(Annee__c) ),
NOT(ISBLANK(Annee__c) )
)</errorConditionFormula>
    <errorDisplayField>Annee__c</errorDisplayField>
    <errorMessage>Le Champ Année doit contenir que des chiffres</errorMessage>
</ValidationRule>