unpackaged/main/default/objects/Calendrier_Astreinte__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>N_semaine__c</columns>
    <columns>Agence_PF__c</columns>
    <columns>Date_de_debut__c</columns>
    <columns>Date_de_fin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Annee__c</field>
        <operation>equals</operation>
    </filters>
    <label>Tout</label>
</ListView>