unpackaged/main/default/objects/Calendrier_Astreinte__c/listViews/X2022.listView-meta.xml
<ListView>
    <fullName>X2022</fullName>
    <columns>NAME</columns>
    <columns>N_semaine__c</columns>
    <columns>Agence_PF__c</columns>
    <columns>Date_de_debut__c</columns>
    <columns>Date_de_fin__c</columns>
    <columns>Annee__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>2022</value>
    </filters>
    <label>2022</label>
</ListView>